fixed input text area on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,10 @@
 .nav-link:hover{
   color: #61dafb !important;
 }
+
+
+.textareabox{
+  width: 100%;
+  max-width: 700px;
+    box-sizing: border-box;
+}
